Loosened restrictions on distribution figures

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -53,7 +53,7 @@ The following distributions are used by agents to vote:
     \item Beta(4, 1) (\betadistribution{4}{1}; \autoref{fig:beta-4-1})
 \end{itemize}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/dists/uniform}
@@ -61,7 +61,7 @@ The following distributions are used by agents to vote:
     \label{fig:uniform}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/dists/gaussian}
@@ -69,7 +69,7 @@ The following distributions are used by agents to vote:
     \label{fig:gaussian}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/dists/beta_0.3_0.3}
@@ -77,7 +77,7 @@ The following distributions are used by agents to vote:
     \label{fig:beta-0.3-0.3}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/dists/beta_0.3_3}
@@ -85,7 +85,7 @@ The following distributions are used by agents to vote:
     \label{fig:beta-0.3-3}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/dists/beta_3_0.3}
@@ -93,7 +93,7 @@ The following distributions are used by agents to vote:
     \label{fig:beta-3-0.3}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/dists/beta_4_4}
@@ -101,7 +101,7 @@ The following distributions are used by agents to vote:
     \label{fig:beta-4-4}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/dists/beta_1_4}
@@ -109,7 +109,7 @@ The following distributions are used by agents to vote:
     \label{fig:beta-1-4}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!htbp]
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/dists/beta_4_1}
