Removed sample.bib

--- a/thesis.tex
+++ b/thesis.tex
@@ -152,8 +152,7 @@
     % The style used here is for IEEE transactions formatting:
     \references{
         references/IEEEabrv,
-        references/research,
-        references/sample}
+        references/research}
     {IEEEtran}
 
     % The style used here is for AIAA formatting:
