Fixed some spellings in abstract

--- a/content/frontmatter/abstract.tex
+++ b/content/frontmatter/abstract.tex
@@ -18,7 +18,7 @@
     The idea behind this type of voting system is it allows agents without the time
     or knowledge necessary to properly become informed on a topic to become
     inactive and pass their vote to a proxy that does.
-    The hope is this proxy will be an expert in on the topic and so yield a more
+    The hope is this proxy will be an expert on the topic and so yield a more
     informed end decision.
     This study looks into exploiting this proxy-inactive agent relationship in order
     to increase the accuracy of a measurement system while using less expensive forms
@@ -28,7 +28,7 @@
     proxies named `weighting mechanisms.'
     While it is ultimately discovered that proxy vote systems should not be used in
     all situations, this study is able to identify potential applications for
-    employing proxy vote systems as well as lay out potential avenues of additional
+    employing proxy vote systems as well as lay out potential avenues for additional
     research.
 
 \end{abstract}
