Changed some figure caption phrasing

--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -109,8 +109,8 @@ than any of the populations are the same.
     \centering
     \includegraphics[scale=0.75]
     {./content/figures/voting_mechanisms/average-mechanisms-p-values.gv}
-    \caption{The p-values for average voting mechanisms, given the alternative is one
-    population is lesser than the other.
+    \caption{The p-values for average voting mechanisms, given the alternative is
+    that one population has lower error than the other.
     An arrow pointing to another voting mechanism indicates the `from' mechanism
     beats the `to' mechanism.}
     \label{fig:average-mechanisms-p-values}
@@ -150,8 +150,8 @@ The p-values can be found in \autoref{fig:candidate-mechanisms-p-values}.
     \centering
     \includegraphics[scale=0.75]
     {./content/figures/voting_mechanisms/candidate-mechanisms-p-values.gv}
-    \caption{The p-values for candidate voting mechanisms, given the alternative is one
-    population is lesser than the other.
+    \caption{The p-values for candidate voting mechanisms, given the alternative is
+    that one population has lower error than the other.
     An arrow pointing to another voting mechanism indicates the `from' mechanism
     beats the `to' mechanism.}
     \label{fig:candidate-mechanisms-p-values}
@@ -227,8 +227,8 @@ This can be confirmed using a series of Mann-Whitney U-tests, resulting in
     \centering
     \includegraphics[scale=0.75]
     {./content/figures/weighting_mechanisms/weighting-mechanisms-p-values.gv}
-    \caption{The p-values for weighting mechanisms, given the alternative is one
-    population is lesser than the other.
+    \caption{The p-values for weighting mechanisms, given the alternative is that one
+    population has lower error than the other.
     An arrow pointing to another voting mechanism indicates the `from' mechanism
     beats the `to' mechanism.}
     \label{fig:weighting-mechanisms-p-values}
@@ -561,8 +561,8 @@ as well.
     \renewcommand{\arraystretch}{1.0}
 
     \caption{The count of mechanism combinations the achieve a lower error
-    population than weightlessly averaging, ordered by count, then voting mechanism,
-        and finally weighting mechanism.}
+    population than weightlessly averaging, ordered by first count, then voting
+    mechanism, and finally weighting mechanism.}
     \label{tab:lower-pop-combo-count}
 
     \centering
