--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -47,7 +47,7 @@ in such a system.
 \section{Potential Applications}\label{sec:potential-applications}
 Proxy vote systems can be used in situations where highly accurate measurements are
 difficult, costly, or time-consuming, and cheaper or easier alternatives are available.
-While this study will show they will not work in all situations, there do have a
+While this study will show they will not work in all situations, they do have a
 potential use when one of the alternative measurements tends to yield an asymmetrical
 distribution of error.
 
@@ -60,7 +60,7 @@ idea is not explored in this study.
 from themselves to another agent, known as a \textit{proxy}\cite[para.~1.4]
 {Cohensius2017}.
 By doing so, the transferring agent loses their ability to directly affect the
-voting game.
+voting game, instead allowing the proxy to affect it on their behalf.
 In other words, the transferring agent does not vote in an election but rather
 affects the election vicariously through the proxy to which they transferred
 their power.
