Rephrased "Next natural question"

--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -546,13 +546,14 @@ asymmetric distributions.
     \end{tabular}
 \end{table}
 
-A natural next question is which mechanism combinations are more likely to produce a
-lower error?
+The natural next question that aries is, `which mechanism combinations are more likely
+to produce a lower error?'
 The count of how many times each voting mechanism/weighting mechanism combination
 tests to have a lower error than weightlessly averaging in displayed
 in~\autoref{tab:lower-pop-combo-count}.
-This table would seem to indicate that the stronger combinations are more able to
-achieve a lower error.
+This table would seem to indicate that the stronger combinations, as explored
+in~\fullref{sec:lowest-error-overall-combination}, are more able to achieve a lower
+error.
 Surprisingly, even candidate mechanisms are occasionally able to achieve a lower error
 as well.
 
