Added blurb about Preliminaries

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -11,6 +11,8 @@ the costs of ensuring accurate measurements.
 
 
 \section{Preliminaries}\label{sec:preliminaries}
+This section will provide a brief overview of the proxy voting system, as well how it
+generally works.
 
 \subsection{System Design and Agent Space}\label{subsec:system-design-and
 -agent-space}
