Added Danielle's edits

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -135,7 +135,7 @@ them as proxies.
 goes on to discuss how many of such proxies would be needed under random
 selection for a sufficiently accurate opinion to be made.
 These estimates range from 500 to 1000~\cite[para.~3.2]{Mueller1972}, and
-while this study uses preassigned proxies, these proxies' will have random
+while this study uses preassigned proxies, these proxies will have random
 error in their estimations and so \etal{Mueller}'s estimates may come in to
 play.
 However, a primary goal of this paper is to use far fewer measurements than the
