--- a/content/chapter4-conclusions-and-further-work.tex
+++ b/content/chapter4-conclusions-and-further-work.tex
@@ -26,8 +26,8 @@ However, if such agents are available the proxy vote or weightless average appro
 may be able to achieve better performance than alternative techniques that cost more
 than the combined sum of the agents used.
 
-Overall, proxy vote systems as a method to increase system accuracy appears to show
-promise under some circumstances.
+Overall, proxy vote systems as a method to increase system accuracy appear to show
+promise when used under the proper circumstances.
 Further research may be required to identify its full capabilities and weaknesses
 before its full potential can be exploited.
 
