--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -119,7 +119,7 @@ The following distributions are used by agents to vote:
 
 \appendixsection{Voting Mechanism P-Values}
 \autoref{fig:all-voting-mechanisms-p-values} illustrates the p-values for all voting
-mechanisms, given the alternative is one population is lesser than the other.
+mechanisms, given the alternative is that one population has lower error than the other.
 An arrow pointing to another voting mechanism indicates the `from' mechanism beats
 the `to' mechanism.
 
@@ -133,8 +133,8 @@ the `to' mechanism.
         \baselineskip,
         keepaspectratio]
     {./content/figures/voting_mechanisms/all-voting-mechanisms-p-values.gv}
-    \caption{The p-values for all voting mechanisms, given the alternative is one
-    population is lesser than the other.
+    \caption{The p-values for all voting mechanisms, given the alternative is that one
+    population has lower error than the other.
     An arrow pointing to another voting mechanism indicates the `from' mechanism beats
     the `to' mechanism.}
     \label{fig:all-voting-mechanisms-p-values}
@@ -191,7 +191,7 @@ when the estimate distribution is normal or Gaussian.
     \centering
     \includegraphics[scale=0.5]
     {./content/figures/expected_gaussian_distribution_squared_error}
-    \caption{Expected squared error distribution given a gaussian distribution
+    \caption{Expected squared error distribution given a Gaussian distribution
     of estimates.}
     \label{fig:expected_gaussian_distribution_squared_error}
 \end{figure}
